# Resident-Browser

./: .gitignore  README.md  brave_resident.py  config.example.json  config.json  constants.py  main.py  pyproject.toml  resident_browser.py  resident_window.py  selectors.json
portal_profile/: Cookies  Favicons  History  History-journal  Network Persistent State  TransportSecurity  Visited Links
portal_profile/DawnGraphiteCache/: data_1  index
portal_profile/DawnWebGPUCache/: data_1  index
portal_profile/GPUCache/: data_0  data_1  data_2  index
portal_profile/IndexedDB/https_open.spotify.com_0.indexeddb.leveldb/: LOG  LOG.old
portal_profile/IndexedDB/https_qiita.com_0.indexeddb.leveldb/: 000005.ldb  LOG  LOG.old  MANIFEST-000001
portal_profile/IndexedDB/https_www.youtube.com_0.indexeddb.leveldb/: 000066.ldb  LOG  LOG.old  MANIFEST-000001
portal_profile/Local Storage/leveldb/: 000005.ldb  000047.ldb  000050.ldb  000053.ldb  LOG  LOG.old  MANIFEST-000001
portal_profile/Service Worker/Database/: LOG  LOG.old
portal_profile/Service Worker/ScriptCache/: 005189411fc0f740_0  005189411fc0f740_1  297ecea5cebb5dfe_0  297ecea5cebb5dfe_1  64894a593a1a079e_0  64894a593a1a079e_1  a46fc2cb518ae280_0  a46fc2cb518ae280_1  d0757ff92c7cde0a_0  d0757ff92c7cde0a_1
portal_profile/Session Storage/: 000005.ldb  000034.ldb  000035.ldb  000038.ldb  000041.ldb  000043.ldb  LOG  LOG.old  MANIFEST-000001
portal_profile/Shared Dictionary/: db
portal_profile/WebStorage/: QuotaManager
portal_profile/shared_proto_db/: LOG  LOG.old
portal_profile/shared_proto_db/metadata/: LOG  (+1 more)
(+780 files in other folders)
