[project]
name = "bravenewwindow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keyboard>=0.13.5",
    "pyperclip>=1.11.0",
    "pyqt6>=6.11.0",
    "pyqt6-webengine>=6.11.0",
    "pywebview>=6.2.1",
    "pywinauto>=0.6.9",
]
